--- a/hammerblade/torch/tests/sinkhorn_tests/sinkhorn_app/profiling_kernels/Makefile
+++ b/hammerblade/torch/tests/sinkhorn_tests/sinkhorn_app/profiling_kernels/Makefile
@@ -9,10 +9,10 @@ KERNELS := 0 1 2
 ALL_LOGS := $(KERNELS:%=run_%/manycore_stats.log)
 logs: $(ALL_LOGS)
 
-run_%/vanilla_stats.csv:
+run_%/vanilla_stats.csv: $(APP_SCRIPT)
 	mkdir -p run_$*
 	cd run_$* ; PYTHONPATH=$(PYTORCH_DIR) pycosim ../$(APP_SCRIPT) --hb $* > log.txt
 
 run_%/manycore_stats.log: run_%/vanilla_stats.csv
 	cd run_$* ; PYTHONPATH=$(MCPY_DIR) python -m vanilla_parser
-	cd run_$* ; mv stats/vanilla_stats.csv .
+	cd run_$* ; mv stats/manycore_stats.log .
