--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -2220,6 +2220,9 @@
   dispatch:
     CPU: _reciprocal__cpu
     CUDA: _reciprocal__cuda
+    SparseCPU: _sparse_reciprocal__cpu
+    SparseHammerBlade: _sparse_reciprocal__hb
+    HammerBlade: _reciprocal__hb
 
 - func: reciprocal.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
   supports_named_tensor: True
