--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -6599,6 +6599,12 @@
   dispatch:
     HammerBlade: vincr_hb
 
+- func: lu(Tensor self, bool pivot, bool get_infos) -> (Tensor factorization, Tensor pivots, Tensor infos)
+  use_c10_dispatcher: full
+  variants: function
+  dispatch:
+    HammerBlade: lu_hb
+
 # Tutorial TODO:
 # Create an ATen operator vvadd, which takes 2 input arguments
 # self, and other, and produce a Tensor
@@ -6607,7 +6613,8 @@
 # Python binding will be created for you automatically
 # You would be able to call it by torch.vvadd()
 
-# - func: vvadd() -> Tensor
-#   use_c10_dispatcher: full
-#   variants: function
-#   dispatch:
+- func: vvadd(Tensor self, Tensor other) -> Tensor
+  use_c10_dispatcher: full
+  variants: function
+  dispatch:
+    HammerBlade: vvadd_hb
