--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -534,7 +534,6 @@
   use_c10_dispatcher: full
   supports_named_tensor: True
   variants: function, method
-  HammerBlade: not_kernel_hb
 
 - func: bitwise_not_(Tensor(a!) self) -> Tensor(a!)
   supports_named_tensor: True
@@ -545,6 +544,7 @@
   dispatch:
     CPU: bitwise_not_out
     CUDA: bitwise_not_out
+    HammerBlade: bitwise_not_out
 
 - func: logical_not(Tensor self) -> Tensor
   supports_named_tensor: True
