--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -5572,6 +5572,7 @@
   dispatch:
     CPU: legacy::cpu::_thnn_hardtanh_forward
     CUDA: legacy::cuda::_thnn_hardtanh_forward
+    HammerBlade: hardtanh_hb
 
 - func: hardtanh_backward.grad_input(Tensor grad_output, Tensor self, Scalar min_val, Scalar max_val, *, Tensor(a!) grad_input) -> Tensor(a!)
   python_module: nn
