In place hardtanh

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -5592,6 +5592,7 @@
   dispatch:
     CPU: legacy::cpu::_thnn_hardtanh_forward_
     CUDA: legacy::cuda::_thnn_hardtanh_forward_
+    HammerBlade: hardtanh_hb_
 
 - func: leaky_relu.out(Tensor self, Scalar negative_slope=0.01, *, Tensor(a!) out) -> Tensor(a!)
   python_module: nn
