--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -6620,3 +6620,9 @@
 - func: eyeriss_convolution(Tensor self, Tensor weight, Tensor? bias, int[] padding, int[] stride, int[] dilation, int groups) -> Tensor
   dispatch:
     HammerBlade: eyeriss_convolution
+
+- func: mm_smu(Tensor self, Tensor mat2) -> Tensor
+  use_c10_dispatcher: full
+  variants: function
+  dispatch:
+    HammerBlade: smu_mm
