Add extension of _cat kernel

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -5362,6 +5362,7 @@
   dispatch:
     CPU: l1_loss_backward_out
     CUDA: l1_loss_backward_out
+    HammerBlade: l1_loss_backward_out
 
 - func: l1_loss_backward(Tensor grad_output, Tensor self, Tensor target, int reduction) -> Tensor
   use_c10_dispatcher: full
