--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -2073,10 +2073,10 @@
 - func: cdist(Tensor x1, Tensor x2, float p=2, int? compute_mode=None) -> Tensor
   use_c10_dispatcher: full
   supports_named_tensor: True
-  dispatch:
-    CPU: cdist
-    CUDA: cdist
-    HammerBlade: cdist_hb
+  # dispatch:
+  #   CPU: cdist
+  #   CUDA: cdist
+  #   HammerBlade: cdist_hb
 
 - func: _cdist_backward(Tensor grad, Tensor x1, Tensor x2, float p, Tensor cdist) -> Tensor
   use_c10_dispatcher: full
