update pytorch to support bigblade

--- a/c10/hammerblade/CMakeLists.txt
+++ b/c10/hammerblade/CMakeLists.txt
@@ -130,6 +130,10 @@ if(NOT USE_HB_EMUL)
   install(FILES ${CMAKE_CURRENT_BINARY_DIR}/riscv/kernel.riscv DESTINATION riscv)
   install(PROGRAMS $ENV{HB_KERNEL_DIR}/pycosim.sh
           DESTINATION bin RENAME pycosim)
+  install(PROGRAMS $ENV{HB_KERNEL_DIR}/pycosim.profile.sh
+          DESTINATION bin RENAME pycosim.profile)
+  install(PROGRAMS $ENV{HB_KERNEL_DIR}/pycosim.saif.sh
+          DESTINATION bin RENAME pycosim.saif)
   install(PROGRAMS $ENV{HB_KERNEL_DIR}/pycosim.trace.sh
           DESTINATION bin RENAME pycosim.trace)
   install(PROGRAMS $ENV{HB_KERNEL_DIR}/pycosim.wave.sh
