[spmul] adds testing changes to include new kernel offloading in sinkhorn

--- a/hammerblade/torch/tests/sinkhorn_tests/Makefile
+++ b/hammerblade/torch/tests/sinkhorn_tests/Makefile
@@ -3,7 +3,7 @@ MCPY_DIR := $(BRG_BSG_BLADERUNNER_DIR)/bsg_manycore/software/py
 APP_SCRIPT := test_sinkhorn.py
 
 # There are four kernels to offload individually.
-KERNELS := 0 1 2 3 4
+KERNELS := 0 1 2 3 4 5
 
 ALL_LOGS := $(KERNELS:%=run_%/manycore_stats.log) cpu_run/log.txt
 ALL_SAIF := $(KERNELS:%=saif_%/run.saif.gz)
@@ -34,12 +34,12 @@ cpu_run/log.txt: $(APP_SCRIPT)
 cdist: run_4/manycore_stats.log saif_4/run.saif
 	cd saif_4 ; gzip run.saif
 	
-run_4/manycore_stats.log: test_cdist.py
+run_5/manycore_stats.log: test_cdist.py
 	mkdir -p run_4
 	cd run_4 ; PYTHONPATH=$(PYTORCH_DIR) pycosim.profile ../test_cdist.py > log.txt
 	cd run_4 ; PYTHONPATH=$(MCPY_DIR) python -m vanilla_parser
 	cd run_4 ; mv stats/manycore_stats.log .
 
-saif_4/run.saif: test_cdist.py
+saif_5/run.saif: test_cdist.py
 	mkdir -p saif_4
 	cd saif_4 ; PYTHONPATH=$(PYTORCH_DIR) pycosim.saif ../test_cdist.py --cosim_scale 10 > log.txt
