--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -975,7 +975,7 @@
   dispatch:
     CPU: embedding
     CUDA: embedding
-    HammerBlade: embedding_hb
+    HammerBlade: embedding
 
 - func: embedding_backward(Tensor grad, Tensor indices, int num_weights, int padding_idx, bool scale_grad_by_freq, bool sparse) -> Tensor
   use_c10_dispatcher: full
@@ -6602,6 +6602,19 @@
   variants: function
   dispatch:
     HammerBlade: vincr_hb
+
+- func: embedding_recsys(Tensor weight, Tensor indices, int padding_idx=-1, bool scale_grad_by_freq=False, bool sparse=False) -> Tensor
+  use_c10_dispatcher: full
+  dispatch:
+    HammerBlade: embedding_hb
+
+- func: embedding_backward_recsys(Tensor grad, Tensor indices, int num_weights, int padding_idx, bool scale_grad_by_freq, bool sparse) -> Tensor
+  use_c10_dispatcher: full
+
+- func: embedding_dense_backward_recsys(Tensor grad_output, Tensor indices, int num_weights, int padding_idx, bool scale_grad_by_freq) -> Tensor
+  use_c10_dispatcher: full
+  dispatch:
+    HammerBlade: embedding_dense_backward_hb_recsys
 
 # Tutorial TODO:
 # Create an ATen operator vvadd, which takes 2 input arguments
