[travis] trying to fix travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
 
 install:
     # Install Python requirements
-    - pip install --upgrade pip setuptools twine
+    - pip install --upgrade pip setuptools
     - pip install numpy pyyaml mkl mkl-include setuptools cmake cffi typing sklearn tqdm pytest hypothesis
     - pip list
 
