--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -3068,6 +3068,7 @@
     HammerBlade: clone
     SparseCPU: clone_sparse
     SparseCUDA: clone_sparse
+    SparseHammerBlade: clone_sparse
     MkldnnCPU: mkldnn_clone
     QuantizedCPU: quantized_clone
   supports_named_tensor: True
