--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -4383,6 +4383,7 @@
   dispatch:
     CPU: ne_out
     CUDA: ne_out
+    HammerBlade: ne_out
     QuantizedCPU: ne_out_quantized_cpu
 
 - func: ne.Scalar(Tensor self, Scalar other) -> Tensor
@@ -4392,6 +4393,7 @@
   dispatch:
     CPU: ne
     CUDA: ne
+    HammerBlade: ne
     QuantizedCPU: ne_quantized_cpu
 
 - func: ne.Tensor_out(Tensor self, Tensor other, *, Tensor(a!) out) -> Tensor(a!)
@@ -4399,6 +4401,7 @@
   dispatch:
     CPU: ne_out
     CUDA: ne_out
+    HammerBlade: ne_out
     QuantizedCPU: ne_out_quantized_cpu
 
 - func: ne.Tensor(Tensor self, Tensor other) -> Tensor
@@ -4408,6 +4411,7 @@
   dispatch:
     CPU: ne
     CUDA: ne
+    HammerBlade: ne
     QuantizedCPU: ne_quantized_cpu
 
 - func: eq.Scalar_out(Tensor self, Scalar other, *, Tensor(a!) out) -> Tensor(a!)
@@ -4415,6 +4419,7 @@
   dispatch:
     CPU: eq_out
     CUDA: eq_out
+    HammerBlade: eq_out
     QuantizedCPU: eq_out_quantized_cpu
 
 - func: eq.Scalar(Tensor self, Scalar other) -> Tensor
@@ -4424,6 +4429,7 @@
   dispatch:
     CPU: eq
     CUDA: eq
+    HammerBlade: eq
     QuantizedCPU: eq_quantized_cpu
 
 - func: eq.Tensor_out(Tensor self, Tensor other, *, Tensor(a!) out) -> Tensor(a!)
@@ -4431,6 +4437,7 @@
   dispatch:
     CPU: eq_out
     CUDA: eq_out
+    HammerBlade: eq_out
     QuantizedCPU: eq_out_quantized_cpu
 
 - func: eq.Tensor(Tensor self, Tensor other) -> Tensor
@@ -4440,6 +4447,7 @@
   dispatch:
     CPU: eq
     CUDA: eq
+    HammerBlade: eq
     QuantizedCPU: eq_quantized_cpu
 
 - func: ge.Scalar_out(Tensor self, Scalar other, *, Tensor(a!) out) -> Tensor(a!)
@@ -4447,6 +4455,7 @@
   dispatch:
     CPU: ge_out
     CUDA: ge_out
+    HammerBlade: ge_out
     QuantizedCPU: ge_out_quantized_cpu
 
 - func: ge.Scalar(Tensor self, Scalar other) -> Tensor
@@ -4456,6 +4465,7 @@
   dispatch:
     CPU: ge
     CUDA: ge
+    HammerBlade: ge
     QuantizedCPU: ge_quantized_cpu
 
 - func: ge.Tensor_out(Tensor self, Tensor other, *, Tensor(a!) out) -> Tensor(a!)
@@ -4463,6 +4473,7 @@
   dispatch:
     CPU: ge_out
     CUDA: ge_out
+    HammerBlade: ge_out
     QuantizedCPU: ge_out_quantized_cpu
 
 - func: ge.Tensor(Tensor self, Tensor other) -> Tensor
@@ -4472,6 +4483,7 @@
   dispatch:
     CPU: ge
     CUDA: ge
+    HammerBlade: ge
     QuantizedCPU: ge_quantized_cpu
 
 - func: le.Scalar_out(Tensor self, Scalar other, *, Tensor(a!) out) -> Tensor(a!)
@@ -4479,6 +4491,7 @@
   dispatch:
     CPU: le_out
     CUDA: le_out
+    HammerBlade: le_out
     QuantizedCPU: le_out_quantized_cpu
 
 - func: le.Scalar(Tensor self, Scalar other) -> Tensor
@@ -4488,6 +4501,7 @@
   dispatch:
     CPU: le
     CUDA: le
+    HammerBlade: le
     QuantizedCPU: le_quantized_cpu
 
 - func: le.Tensor_out(Tensor self, Tensor other, *, Tensor(a!) out) -> Tensor(a!)
@@ -4495,6 +4509,7 @@
   dispatch:
     CPU: le_out
     CUDA: le_out
+    HammerBlade: le_out
     QuantizedCPU: le_out_quantized_cpu
 
 - func: le.Tensor(Tensor self, Tensor other) -> Tensor
@@ -4504,6 +4519,7 @@
   dispatch:
     CPU: le
     CUDA: le
+    HammerBlade: le
     QuantizedCPU: le_quantized_cpu
 
 - func: gt.Scalar_out(Tensor self, Scalar other, *, Tensor(a!) out) -> Tensor(a!)
@@ -4511,6 +4527,7 @@
   dispatch:
     CPU: gt_out
     CUDA: gt_out
+    HammerBlade: gt_out
     QuantizedCPU: gt_out_quantized_cpu
 
 - func: gt.Scalar(Tensor self, Scalar other) -> Tensor
@@ -4520,6 +4537,7 @@
   dispatch:
     CPU: gt
     CUDA: gt
+    HammerBlade: gt
     QuantizedCPU: gt_quantized_cpu
 
 - func: gt.Tensor_out(Tensor self, Tensor other, *, Tensor(a!) out) -> Tensor(a!)
@@ -4527,6 +4545,7 @@
   dispatch:
     CPU: gt_out
     CUDA: gt_out
+    HammerBlade: gt_out
     QuantizedCPU: gt_out_quantized_cpu
 
 - func: gt.Tensor(Tensor self, Tensor other) -> Tensor
@@ -4536,6 +4555,7 @@
   dispatch:
     CPU: gt
     CUDA: gt
+    HammerBlade: gt
     QuantizedCPU: gt_quantized_cpu
 
 - func: lt.Scalar_out(Tensor self, Scalar other, *, Tensor(a!) out) -> Tensor(a!)
